[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://ui/HUDInventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/BuildMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/HUDScore.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/BuildItemHover.gd" type="Script" id=5]
[ext_resource path="res://ui/MiniMap.tscn" type="PackedScene" id=6]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Inventory" parent="." index="0" instance=ExtResource( 2 )]

[node name="BuildMenu" parent="." index="1" instance=ExtResource( 3 )]

[node name="HUDScore" parent="." index="2" instance=ExtResource( 4 )]

anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 24.0

[node name="BuildItemHover" type="PanelContainer" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 221.0
margin_right = 194.0
margin_bottom = 253.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Margin", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="BuildItemHover" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 109.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="BuildItemHover/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 102.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="LabelRequirements" type="Label" parent="BuildItemHover/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 94.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Requirements:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RequirementsContainer" type="VBoxContainer" parent="BuildItemHover/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 94.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="MiniMap" parent="." index="4" instance=ExtResource( 6 )]

anchor_left = 1.0
anchor_right = 1.0
margin_left = -230.0
margin_right = 0.0

[connection signal="hover_in" from="BuildMenu" to="BuildItemHover" method="_on_BuildMenu_hover_in"]

[connection signal="hover_out" from="BuildMenu" to="BuildItemHover" method="_on_BuildMenu_hover_out"]


